Fix `overflow: hidden` preventing the focus outline to be displayed correctly

--- a/css/compat/plugins/compat-woo-delivery-129-beta-2.css
+++ b/css/compat/plugins/compat-woo-delivery-129-beta-2.css
@@ -28,8 +28,15 @@ div.woocommerce form .form-row.coderockz_woo_delivery_delivery_selection_box.woo
   display: none; }
 
 /*------------------------------------*\
-  #WOO-DELIVERY FORM-ROW
+	#WOO-DELIVERY FORM-ROW
 \*------------------------------------*/
+.fc-wrapper #coderockz_woo_delivery_delivery_date_section,
+.fc-wrapper #coderockz_woo_delivery_delivery_selection_field,
+.fc-wrapper #coderockz_woo_delivery_delivery_time_section,
+.fc-wrapper #coderockz_woo_delivery_pickup_date_section,
+.fc-wrapper #coderockz_woo_delivery_pickup_time_section {
+  overflow: initial; }
+
 .fc-wrapper #coderockz_woo_delivery_delivery_selection_field ~ #coderockz_woo_delivery_delivery_date_section,
 .fc-wrapper #coderockz_woo_delivery_delivery_selection_field ~ #coderockz_woo_delivery_pickup_date_section {
   margin-top: 20px; }
