--- a/sass/compat/plugins/woo-delivery/_woo-delivery-form-fields.scss
+++ b/sass/compat/plugins/woo-delivery/_woo-delivery-form-fields.scss
@@ -1,8 +1,18 @@
 /*------------------------------------*\
-  #WOO-DELIVERY FORM-ROW
+	#WOO-DELIVERY FORM-ROW
 \*------------------------------------*/
+
+.fc-wrapper #coderockz_woo_delivery_delivery_date_section,
+.fc-wrapper #coderockz_woo_delivery_delivery_selection_field,
+.fc-wrapper #coderockz_woo_delivery_delivery_time_section,
+.fc-wrapper #coderockz_woo_delivery_pickup_date_section,
+.fc-wrapper #coderockz_woo_delivery_pickup_time_section {
+	overflow: initial;
+}
+
+
 
 .fc-wrapper #coderockz_woo_delivery_delivery_selection_field ~ #coderockz_woo_delivery_delivery_date_section,
 .fc-wrapper #coderockz_woo_delivery_delivery_selection_field ~ #coderockz_woo_delivery_pickup_date_section {
-  margin-top: $global-spacing-small;
+	margin-top: $global-spacing-small;
 }
